--- a/src/components/NewExpense/NewExpense.css
+++ b/src/components/NewExpense/NewExpense.css
@@ -18,6 +18,7 @@
     color: white;
     border-radius: 12px;
     margin-right: 1rem;
+    align-self: center;
   }
   
   .new-expense button:hover,
